added profile page and added status scope

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -12,3 +12,9 @@ jason:
   email: "jason@teamtreehouse.com"
   profile_name: "jasonseifer"
   
+
+jim:
+  first_name: "Jim"
+  last_name: "Hoskins"
+  email: "jim@teamtreehouse.com"
+  profile_name: "jimhoskins"
